Fixes a mobile layout issue of the login box.

--- a/webapp/client/css/main.scss
+++ b/webapp/client/css/main.scss
@@ -229,7 +229,7 @@ div.loginbuttons {
   div {
     //border-radius: 4px;
     background-color: #eee;
-    padding: 8px 25px 20px;
+    padding: 8px 15px 20px;
     width: auto;
     display: inline-block;
     margin: auto;
@@ -239,8 +239,15 @@ div.loginbuttons {
       width: auto;
       margin: 5px auto 0px;
 
-      tr td {
+      tbody tr td {
         padding: 8px;
+        text-align: center;
+
+        button {
+          width: 100%;
+          box-shadow: 0px 5px 10px -5px #666;
+          margin: 0px;
+        }
 
         p {
           text-align: center;
@@ -253,11 +260,6 @@ div.loginbuttons {
           color: #aaa2a7;
           text-shadow: 0px 0px 2px white;
         }
-      }
-
-      tr td button {
-        width: 100%;
-        box-shadow: 0px 5px 10px -5px #666;
       }
     }
   }
@@ -289,6 +291,7 @@ button.social::before {
 button.facebook {
   background: linear-gradient(#3B5998, #324378);
 }
+
 button.facebook::before {
   content: "\f09a";
 }
@@ -296,6 +299,7 @@ button.facebook::before {
 button.google {
   background: linear-gradient(#dd4b39, #b33d2e);
 }
+
 button.google::before {
   content: "\f0d5";
 }
@@ -303,6 +307,7 @@ button.google::before {
 button.twitter {
   background: linear-gradient(#4099FF, #337bcd);
 }
+
 button.twitter::before {
   content: "\f099";
 }
@@ -310,6 +315,7 @@ button.twitter::before {
 button.pinterest {
   background: linear-gradient(#bd081c, #950715);
 }
+
 button.pinterest::before {
   content: "\f0d2";
 }
@@ -317,6 +323,7 @@ button.pinterest::before {
 button.reddit {
   background: linear-gradient(#d4dbe3, #b6bcc2);
 }
+
 button.reddit::before {
   content: "\f1a1";
 }
@@ -324,6 +331,7 @@ button.reddit::before {
 button.linkedin {
   background: linear-gradient(#4875B4, #3e6096);
 }
+
 button.linkedin::before {
   content: "\f0e1";
 }
@@ -331,6 +339,7 @@ button.linkedin::before {
 button.whatsapp {
   background: linear-gradient(#43d854, #3abc49);
 }
+
 button.whatsapp::before {
   content: "\f232";
 }
